fixed tungsten ore texture, added smelting recipe for tungsten ingot, added crafting recipe for tungsten block

--- a/main/resources/assets/minercraft/lang/en_us.lang
+++ b/main/resources/assets/minercraft/lang/en_us.lang
@@ -1,3 +1,4 @@
 item.tungsten_ingot.name=Tungsten Ingot
 item.copper_ingot.name=Copper Ingot
 tile.tungsten_ore.name=Tungsten Ore
+tile.tungsten_block.name=Tungsten Block
