new creative tab

--- a/main/resources/assets/minercraft/lang/en_us.lang
+++ b/main/resources/assets/minercraft/lang/en_us.lang
@@ -4,3 +4,4 @@ tile.copper_ore.name=Copper Ore
 tile.copper_block.name=Copper Block
 tile.tungsten_ore.name=Tungsten Ore
 tile.tungsten_block.name=Tungsten Block
+itemGroup.tabMinerCraft=Miner Craft
