--- a/main/resources/assets/minercraft/lang/en_us.lang
+++ b/main/resources/assets/minercraft/lang/en_us.lang
@@ -1,4 +1,5 @@
 item.tungsten_ingot.name=Tungsten Ingot
+item.tungsten_pickaxe.name=Tungsten Pickaxe
 item.copper_ingot.name=Copper Ingot
 tile.copper_ore.name=Copper Ore
 tile.copper_block.name=Copper Block
